_scss/componenets/_footer.scss
//Overrides for Canvas
#footer {
  position: relative;
  background-color: #14718A;
  border-top: none;
}



a.si-facebook {
  display: inline-block;
  float: right;
  margin-right: 20px;
  @media (max-width: $width-md) {
    float: none;
  }
}

.icon-facebook {
  color: white;
  font-size: 25px;
  background-color: #3B5998;
  width: 37px;
  text-align: center;
  border-radius: 8px;
  //margin-right: 20px;
  @media (max-width: $width-sm) {
    float: none;
    //margin-left: 20px;
    margin-right: auto;
  }
}

a.si-google {
  display: inline-block;
  float: right;
  @media (max-width: $width-md) {
    float: none;
  }
}

.icon-google {
  color: white;
  font-size: 25px;
  background-color: #b62b1c;
  border: 1px solid white;
  width: 37px;
  text-align: center;
  border-radius: 8px;
  float: right;
  @media (max-width: $width-sm) {
    float: none;
    margin-left: auto;
    margin-right: auto;
  }
}

